[gd_scene load_steps=2 format=3 uid="uid://b3x0y7xqbv1c6"]

[ext_resource type="Script" path="res://Scripts/convoy_settlement_menu.gd" id="1_settlement_script"]

[node name="ConvoySettlementMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settlement_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Button" parent="MainVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20

[node name="VendorTabContainer" type="TabContainer" parent="MainVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="SettlementInfoTab" type="ScrollContainer" parent="VendorTabContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
name = "Settlement Info"
follow_focus = true

[node name="SettlementContentVBox" type="VBoxContainer" parent="VendorTabContainer/SettlementInfoTab"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3


[node name="BackButton" type="Button" parent="MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"